--- a/css/basic.css
+++ b/css/basic.css
@@ -13,6 +13,10 @@
     --card-link-color: #6F4F5A
 }
 
+.main {
+    height:100%;
+}
+
 .appllication {
     background-color: var(--main-hover-link-color);
     margin: 0;
@@ -50,6 +54,7 @@ img {
     flex-wrap: nowrap;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     border-radius: 3px;
+    flex-shrink: 0;
 
 }
 .application__header__heading {
@@ -73,10 +78,15 @@ img {
 }
 
 /*main*/
+.application__main {
+    flex-grow: 1;
+}
+
 .application__main__content {
     background-color: var(--main-content-bg-color);
     margin: 15px;
     padding: 27px;
+    flex-grow: 1;
 }
 .application__main__content__heading2 {
     font-size: 20px;
